# repro_rfantibody_for-cancer-targets

./: .gitignore  README.md  pyproject.toml
campaigns/: smoke_test.yaml
campaigns/cancer/: cd19_scfv.yaml  cd20_vhh.yaml  cldn18_vhh.yaml  ctla4_vhh.yaml  egfr_vhh.yaml  gpc3_vhh.yaml  her2_vhh.yaml  pdl1_vhh.yaml  tigit_vhh.yaml  trop2_vhh.yaml
campaigns/cancer_drivers/: _smoke_test.yaml  b7h3_vhh.yaml  cd47_vhh.yaml  ceacam5_vhh.yaml  egfr_cetuximab_vhh.yaml  egfrviii_vhh.yaml  epha2_vhh.yaml  gpc2_vhh.yaml  her2_domIV_vhh.yaml  msln_cterm_vhh.yaml  msln_nterm_vhh.yaml
campaigns/paper_repro/: ha_vhh.yaml  phox2b_scfv.yaml  rsv_vhh.yaml  sars_cov2_vhh.yaml  tcdb_scfv.yaml  tcdb_vhh.yaml
campaigns/rare_disease/: complement_c5_vhh.yaml  gne_stabilizer_vhh.yaml  il6r_vhh.yaml  pcsk9_vhh.yaml
docs_plans/: saloni_dataviz_guidelines.md  v0_detailed_tech_report_on_challenging+impactful_cancer_targets.md  v0_detailed_tech_report_on_challenging+impactful_cancer_targets.tex  v0_harness+repor_detailed-specs.md  v1_challenging-but-validated+impactful-targets-in-cancer_detailed_specs.md  v2_script-to-invoke_rf-ab-harness_detailed-specs.md
harness/: _bio_utils.py  cli.py
harness/analysis/: __init__.py  export.py  filter.py  rank.py  report.py
scripts/: analyze_all_campaigns.py  analyze_contacts.py  check_progress.sh  derive_epitopes.py  generate_figures.py  patch_rfantibody.py  run_cancer_drivers.py  run_cancer_drivers_modal.py  sync_modal_results.sh  validate_campaigns.py
tests/: test_analysis.py  test_audit_fixes.py  test_config.py  test_target_prep.py
(+21 files in other folders)
